# LNG

./: .gitignore  CMakeLists.txt  README.md  premake5.lua  test.lng
Example/assets/: test.lng
Example/src/: Source.cpp
Example/x64/Debug/: vc142.idb
Example/x64/Debug/Example.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Example.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
LNG/: CMakeLists.txt  LNG.xml  test.lng
LNG/src/: LNG.h  lngpch.cpp  lngpch.h
LNG/src/Core/: Parser.cpp  Parser.h  Test.cpp
LNG/src/Core/Types/: Property.cpp  Property.h  Vector.h
x64/Debug/: Example.ilk
